# design3-mcu

./: .gitignore  CMakeLists.txt  Makefile  Protocol.md  README.md  arm-none-toolchain.cmake  design3.xml  protocol.md
app/: main.py
app/actions/: antennaidentificationaction.py
app/api/: gotoposition.py  ledok.py
app/domain/command/: commandcontroller.py  visionregulation.py
app/domain/gameboard/: gameboard.py  position.py  test_gameboard.py  test_position.py
app/domain/pathfinding/: get_segments.py  grid.py  pathfinding.py  test_get_segments.py  test_grid.py  test_integration_pathfinding.py  test_pathfinding.py
app/gameboard/: gameboard.py  position.py  test_gameboard.py
app/mcu/: commands.py  protocol.py  robotcontroller.py  test_commands.py  test_protocol.py
app/pathfinding/: Itest_pathfinding.py  astar.py  graph.py  grid.py  pathfinding.py  test_graph.py  test_grid.py  test_pathfinding.py
app/service/: pathfinding_application_service.py  test_pathfinding_application_service.py  timer.py
app/simulator/: simulator.py  simulatortaskfactory.py
app/tests/mcu/: test_commands.py  test_protocol.py
inc/: CommandHandler.h  HD44780U.h  LCD.h  MotorController.h  MotorEncoder.h  adc.h  command.h  defines.h  delay.h  id.h  leds.h  main.h  manchester.h  motor.h  pid.h  stm32f4xx_conf.h  stm32f4xx_it.h  tm_stm32f4_usb_vcp.h  uart.h  usb_bsp.h  usb_conf.h  usb_core.h  usb_dcd.h  usb_dcd_int.h  usb_defines.h  usb_regs.h  usbd_cdc_core.h  usbd_cdc_vcp.h  usbd_conf.h  usbd_core.h  usbd_def.h  usbd_desc.h  usbd_ioreq.h  usbd_req.h  usbd_usr.h  util.h
mcu/: CMakeLists.txt  stm32_flash.ld
mcu/src/: main.c
src/: CommandHandler.c  LCD.c  MotorController.c  MotorEncoder.c  adc.c  blink.c  command.c  delay.c  id.c  leds.c  main.c  manchester.c  pid.c  run_tests.sh  system_stm32f4xx.c  tm_stm32f4_usb_vcp.c  uart.c  usb_bsp.c  usb_core.c  usb_dcd.c  usb_dcd_int.c  usbd_cdc_core.c  usbd_cdc_vcp.c  usbd_core.c  usbd_desc.c  usbd_ioreq.c  usbd_req.c  usbd_usr.c  util.c
src/python/: __main__.py
src/python/app/: main.py
src/python/base-station/: main.py
src/python/gameboard/: gameboard.py  gameboardtest.py  position.py  positiontest.py
src/python/map/: position.py
src/python/pathfinding/: astartest.py
src/python/simulator/: simulator.py  (+1 more)
startup/: startup_stm32.s
tests/: accel.py  adc.py  comm.py  communication.py  encodeur.py  identification.py  manchester.py  manual_control.py  motor.py  pid.py  protocol.py  requirements.txt  test_setpidmode.py  util.py
util/: 45-stm32-usb.rules  46-polulu.rules  99-pololu.rules  pololu.py
(+23 files in other folders)
